# AmiBroker_DSE_plugin

./: .gitignore  CMakeLists.txt  Plugin.def  README.md  build_manual.bat  topics.md
.github/: topics.yml
ADK/: adk.html  guide.css
ADK/ASCII/: ASCII.clw  ASCII.cpp  ASCII.def  ASCII.dsp  ASCII.dsw  ASCII.h  ASCII.plg  ASCII.rc  Plugin.cpp  ReadMe.txt  Resource.h  StdAfx.cpp  StdAfx.h
ADK/ASCII/res/: ASCII.rc2
ADK/CMAE/: CMAE.cpp  CMAE.def  CMAE.dsp  CMAE.dsw  CMAE.h  CMAE.rc  CMAE.sln  CMAE.vcproj  Plugin.cpp  ReadMe.txt  Resource.h  StdAfx.cpp
ADK/CMAE/cmaes/: cmaes.cpp  cmaes.h  compile  docfunctions.txt  example2.c  initials.par  plotcmaesdat.m  readme  signals.par
ADK/CMAE/x64/Release/: BuildLog.htm  CMAE.dll.intermediate.manifest  CMAE.res  mt.dep
ADK/Candle/: Candle.cpp  Candle.dev  Candle.dsp  Candle.dsw  Candle.plg  Functions.cpp  Plugin.cpp  ReadMe.txt  StdAfx.cpp  StdAfx.h
ADK/Data_Template/: ConfigDlg.cpp  ConfigDlg.h  Plugin.cpp  ReadMe.txt  StdAfx.h  Test.aps  Test.clw  Test.dsp  Test.h  Test.plg  Test.rc  resource.h
ADK/JRSample/: Functions.cpp  JRSample.cpp  JRSample.dev  JRSample.dsp  JRSample.plg  Plugin.cpp  ReadMe.txt  StdAfx.cpp  StdAfx.h
ADK/MOCASample/: MOCASample.cpp  MOCASample.def  MOCASample.dsp  MOCASample.dsw  MOCASample.h  MOCASample.plg  MOCASample.rc  Plugin.cpp  ReadMe.txt  Resource.h  StdAfx.cpp  kiss_rand.cpp  kiss_rand.h
ADK/ODBC/: ConfigDlg.cpp  ConfigDlg.h  Functions.cpp  Global.cpp  Global.h  ODBC.clw  ODBC.cpp  ODBC.def  ODBC.dsp  ODBC.dsw  ODBC.h  ODBC.opt  ODBC.plg  ODBC.rc  Plugin.cpp  ReadMe.txt  SRecordset.cpp  SRecordset.h  StdAfx.h  resource.h
ADK/ODBC/Docs/: odbc.html
ADK/PSOSample/: PSOSample.cpp  PSOSample.def  PSOSample.dsp  PSOSample.dsw  PSOSample.h  PSOSample.plg  PSOSample.rc  PSOSample.sln  PSOSample.vcproj  Plugin.cpp  ReadMe.txt  Resource.h  SPSO2007.bak  SPSO2007.cpp  SPSO2007.h  StdAfx.cpp  StdAfx.h
ADK/PSOSample/res/: PSOSample.rc2
ADK/QP2/: ConfigDlg.cpp  ConfigDlg.h  Plugin.cpp  QP2.clw  QP2.cpp  QP2.dsp  QP2.dsw  QP2.h  QP2.plg  QP2.rc  ReadMe.txt  StdAfx.cpp  StdAfx.h  qpdll.lib  resource.h  usrdll22.h
ADK/QT/: ConfigDlg.cpp  ConfigDlg.h  Plugin.cpp  QT.clw  QT.cpp  QT.def  QT.dsp  QT.dsw  QT.h  QT.rc  ReadMe.txt  StdAfx.cpp  StdAfx.h  resource.h
ADK/QT/res/: QT.rc2
ADK/Sample/: Functions.cpp  Plugin.cpp  ReadMe.txt  Sample.cpp  Sample.dev  Sample.dsp  Sample.plg  Sample.sln  Sample.vcproj
ADK/Tribes/: Plugin.cpp  ReadMe.txt  Resource.h  StdAfx.cpp  Tribes.aps  Tribes.cpp  Tribes.def  Tribes.dsp  Tribes.dsw  Tribes.h  Tribes.plg  Tribes.rc  Tribes.sln  Tribes.vcproj  TribesD.cpp  TribesD.h
Dataset/: amibroker_market_category_import.csv
config/: dse_config.ini
formats/: apply_markets.afl  dse.format  dse_categories.format
include/: CsvUtils.h  DseDataEngine.h  DseTypes.h  HtmlUtils.h  Plugin.h  RealtimeFeed.h
src/: CsvUtils.cpp  DseDataEngine.cpp  HtmlUtils.cpp  Plugin.cpp  RealtimeFeed.cpp
tools/Scraper/: amarstock_scraper.py  dse_sector_category_scraper.ipynb
